<resources>
    <string name="app_name">GameLives</string>
    <string name="start_game">Start Game</string>
    <string name="deal">Deal</string>
    <string name="p1score">Player1: 0</string>
    <string name="p2score">Player2: 0</string>
    <string name="livesauto">5</string>
    <string name="livesmanual">5</string>
    <string name="instructions">Instructions</string>
    <string name="overview_title">Overview</string>
    <string name="objective_title">Objetive</string>
    <string name="game_title">Game</string>
    <string name="value_title">Value of each Cards</string>
    <string name="lives_title">Lives</string>
    <string name="overview">
        \n The game of lives consists in betting on the number of tricks you will win at the beginning of each round. For this purpose you
will know your cards, but not of the rest of the players. Therefore, you should base your decision on your cards, as well as on the
bids of your opponents. At the beginning of the game, each player will have 5 lives. If you lose all your lives, the game will be over for you.
The player that remains, once the rest are eliminated, wins. \n
    </string>
    <string name="objective">
The objective of the players will be to bet at the beginning of each round the numbers of tricks that they will win, the difference
between your bid and the actual number of tricks that you actually win in the game will be the amount of lives you will lose. \n
    </string>
    <string name="game">
The game starts when the “hand” player deals 5 cards to each player. Players will then bet on how many tricks they will win in
that round.
        \n The first player to bid will be the player on the left of the “hand” player, and they will continue from them clockwise,
so that the last player to bid will be the “hand” player. In this same order, they will make their move. Once each round is over, it’s shuffled again and the process is repeated, dealing one less card to each player in each of the following rounds, until reaching 1 card per player, at which point 5 cards will be dealt again. \n
    </string>
    <string name="value">
Cards are arranged according to their number and regardless of suit. The king is the highest, and the ace, the lowest. The trick winner will be the one who throws the card with the highest value. In case two or more player tie, the trick will be for the one who throws first in the round \n
    </string>
    <string name="lives">
Initially, each of the players will have five lives. Every round, players will lose as many lives as the difference between their bid
and the total number of tricks won, until they lose all their lives. \n
There are no kind of reward with lives. Players won’t add up lives in any of the rounds neither by winning the bet nor by staying
alive for a number of rounds.
    </string>
    <string name="start">Instructions of use</string>
    <string name="start_ins">To start a new game press the "New Game" button on the main screen</string>
    <string name="ready">When you are ready to start the game press the "Deal" button.</string>
    <string name="bid">At the beginning of each round you will have to place your bid. If the opponent has already bet
    it will appear at the top of the screen. You can check your cards at the bottom to make a right choice.</string>
    <string name="game_layout">To throw a card click on the one you want to throw (cards on the bottom). You will know if the opponent has thrown if one of the cards on the top is colored yellow. Your opponents and your lives will be shown at the top right and bottom right corner (respectively) next to a gem. The tricks won by your opponent and you will be shown on the top left and bottom left corner, respectively  </string>
    <string name="mirror">When only one card is thrown the game changes a little bit. You will be able to see the opponents card and you will have to decide if you win or lose only by seeing the opponents card. The result will be shown after pressing one of the two buttons</string>
</resources>