<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backgrounds"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="invisible">

    <ScrollView
        android:layout_width="412dp"
        android:layout_height="638dp"
        android:scrollbars="vertical"
        tools:layout_editor_absoluteX="-1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textAlignment="center"
                android:id="@+id/overview_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:textSize="28sp"
                android:typeface= "sans"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-black"
                android:shadowColor="#808080"
                android:shadowDx="5"
                android:shadowDy="7"
                android:shadowRadius="6"
                android:text="@string/overview_title"
                />
            <TextView
                android:id="@+id/instructions_overview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="18dp"
                android:textSize="18sp"
                android:typeface= "sans"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/overview"
                />
            <TextView
                android:textAlignment="center"
                android:id="@+id/objective_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:textSize="28sp"
                android:typeface= "sans"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-black"
                android:shadowColor="#808080"
                android:shadowDx="5"
                android:shadowDy="7"
                android:shadowRadius="6"
                android:text="@string/objective_title"
                />
            <TextView
                android:id="@+id/instructions_objective"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:typeface= "sans"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="16dp"
                android:text="@string/objective"
                />
            <TextView
                android:textAlignment="center"
                android:id="@+id/game_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:textSize="28sp"
                android:typeface= "sans"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-black"
                android:shadowColor="#808080"
                android:shadowDx="5"
                android:shadowDy="7"
                android:shadowRadius="6"
                android:text="@string/game_title"
                />
            <TextView
                android:id="@+id/instructions_game"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:typeface= "sans"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="16dp"
                android:text="@string/game"
                />
            <TextView
                android:textAlignment="center"
                android:id="@+id/value_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:textSize="28sp"
                android:typeface= "sans"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-black"
                android:shadowColor="#808080"
                android:shadowDx="5"
                android:shadowDy="7"
                android:shadowRadius="6"
                android:text="@string/value_title"
                />
            <TextView
                android:id="@+id/instructions_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:typeface= "sans"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="16dp"
                android:text="@string/value"
                />
            <TextView
                android:textAlignment="center"
                android:id="@+id/lives_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:textSize="28sp"
                android:typeface= "sans"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-black"
                android:shadowColor="#808080"
                android:shadowDx="5"
                android:shadowDy="7"
                android:shadowRadius="6"
                android:text="@string/lives_title"
                />
            <TextView
                android:id="@+id/instructions_lives"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:typeface= "sans"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="16dp"
                android:text="@string/lives"
                />


        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button

            android:id="@+id/button_to_main"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/round_button"
            app:icon="@drawable/ic_action_name"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="474dp" />

        <Button
            android:id="@+id/button_to_next"
            android:layout_width="50dp"
            android:layout_marginStart="250dp"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            app:icon="@drawable/ic_action_next" />
    </LinearLayout>
</LinearLayout>
